[package]
name = "auspex"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde_json = "1.0.87"
terminal-link = "0.1.0"
